# legacy-forge

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: eval.yml
cookbook/: README.md  javax-to-jakarta.md
docs/: architecture.md  runbook.md  seven-pillars.md
evals/: README.md
evals/cases/java-lang-migrator/: 01_anonymous_runnable_smoke.yaml  02_diamond_smoke.yaml  03_try_finally_smoke.yaml  04_date_smoke.yaml  05_multi_catch_smoke.yaml
evals/fixtures/: anonymous_runnable.java  date_basic.java  diamond_missing.java  multi_catch.java  try_finally_close.java
forge/: __init__.py  budget.py  cli.py  orchestrator.py  prompt.py  provenance.py  tracer.py  worktree.py
forge/agents/: __init__.py  base.py  java_lang_migrator.py  registry.py
forge/evals/: __init__.py  case.py  runner.py
forge/llm/: __init__.py  codex.py  echo.py  provider.py
forge/memory/: __init__.py  store.py
prompts/: README.md
prompts/java-lang-migrator/: v1.md  v1.meta.yaml
tests/: test_cli.py  test_codex_provider.py  test_smoke.py  test_worktree.py
