[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-forge"
version = "0.0.1"
description = "AI-agent Harness for migrating legacy Java/JEE projects to modern Java + Angular"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "Gary" }]
dependencies = [
  "click>=8.1",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
forge = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
